--- a/OpenCVCameraExample3/app/src/main/res/drawable-v24/btn_design1.xml
+++ b/OpenCVCameraExample3/app/src/main/res/drawable-v24/btn_design1.xml
@@ -3,10 +3,10 @@
     android:shape="rectangle">
 
     <stroke
-        android:width="2dp"
-        android:color="@color/black" />
+        android:width="4dp"
+        android:color="@color/yellow" />
     <solid
-        android:color="@color/sky"/>
+        android:color="@color/back_yellow"/>
     <size
         android:width="36dp"
         android:height="50dp" />
