--- a/OpenCVCameraExample3/app/src/main/res/drawable/edge_design.xml
+++ b/OpenCVCameraExample3/app/src/main/res/drawable/edge_design.xml
@@ -4,7 +4,7 @@
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="#000000" />
+                android:color="@color/yellow" />
             <corners android:radius="4dp"/>
             <solid
                 android:color="#FFFFFF" />
