--- a/OpenCVCameraExample3/app/src/main/res/drawable/table_column_design.xml
+++ b/OpenCVCameraExample3/app/src/main/res/drawable/table_column_design.xml
@@ -8,7 +8,7 @@
 
     <item>
         <shape>
-            <solid android:color="#333"/>
+            <solid android:color="@color/yellow"/>
         </shape>
     </item>
 
