--- a/OpenCVCameraExample3/app/src/main/res/drawable/table_header_design.xml
+++ b/OpenCVCameraExample3/app/src/main/res/drawable/table_header_design.xml
@@ -5,10 +5,11 @@
 
             <stroke
                 android:width="1dp"
-                android:color="#333" />
+                android:color="@color/yellow" />
+
 
             <solid
-                android:color="#CCC" />
+                android:color="@color/back_yellow" />
 
         </shape>
     </item>
