--- a/OpenCVCameraExample3/app/src/main/res/layout/activity_car_list.xml
+++ b/OpenCVCameraExample3/app/src/main/res/layout/activity_car_list.xml
@@ -23,7 +23,8 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:text="등록"
-            android:textColor="@color/blue"
+            android:textColor="@color/black"
+            android:background="@drawable/btn_design2"
             android:layout_alignParentLeft="true" />
 
         <!-- TextView: 목록 -->
@@ -34,7 +35,9 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:text="외부차량"
-            android:textColor="@color/blue"
+            android:textColor="@color/black"
+            android:background="@drawable/btn_design2"
+            android:layout_marginLeft="5dp"
             android:layout_alignParentLeft="true" />
 
 
@@ -159,7 +162,8 @@
                 android:layout_width="115dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
-                android:background="@color/backgroundBlue"
+                android:textColor="@color/black"
+                android:background="@drawable/btn_design1"
                 android:padding="0dp"
                 android:text="검색"
                 android:textStyle="bold"
@@ -238,7 +242,7 @@
                     android:background="@drawable/table_column_design" />
 
                 <TextView
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@drawable/table_column_design" />
@@ -278,6 +282,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:layout_margin="4dp"
+        android:textColor="@color/black"
+        android:background="@drawable/btn_design1"
         android:text="더보기" />
 
 </LinearLayout>
