--- a/OpenCVCameraExample3/app/src/main/res/layout/activity_main.xml
+++ b/OpenCVCameraExample3/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/back_yellow"
+    android:padding="20dp"
     android:weightSum="100"
     tools:context=".MainActivity">
 
@@ -12,7 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="horizontal"
-        android:layout_weight="50">
+        android:layout_weight="50"
+        android:background="@drawable/main_image_back">
 
         <ImageView
             android:layout_width="match_parent"
@@ -30,6 +33,7 @@
         android:orientation="horizontal"
         android:layout_weight="10"
         android:gravity="center"
+        android:background="@color/white"
         android:weightSum="2">
 
         <Button
@@ -39,7 +43,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
             android:background="@drawable/btn_design1"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:text="초기화">
         </Button>
         <Button
@@ -51,7 +55,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
             android:background="@drawable/btn_design1"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:text="번호판 인식">
         </Button>
 
@@ -62,6 +66,7 @@
         android:layout_height="0dp"
         android:orientation="horizontal"
         android:layout_weight="10"
+        android:background="@color/white"
         android:gravity="center"
         android:weightSum="3">
 
@@ -83,7 +88,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
             android:background="@drawable/btn_design1"
-            android:textColor="@color/white">
+            android:textColor="@color/black">
         </Button>
 
     </LinearLayout>
@@ -99,6 +104,7 @@
             android:layout_height="0dp"
             android:orientation="horizontal"
             android:gravity="center_vertical"
+            android:background="@color/white"
             android:layout_weight="5">
 
             <TextView
@@ -122,6 +128,7 @@
             android:layout_height="0dp"
             android:orientation="horizontal"
             android:gravity="center_vertical"
+            android:background="@color/white"
             android:layout_weight="5">
 
             <TextView
@@ -144,6 +151,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:orientation="horizontal"
+            android:background="@color/white"
             android:layout_weight="5">
 
             <TextView
@@ -185,6 +193,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="horizontal"
+        android:background="@color/white"
         android:layout_weight="15">
 
         <Button
@@ -195,7 +204,7 @@
             android:layout_margin="15dp"
             android:text="차량 등록"
             android:background="@drawable/btn_design1"
-            android:textColor="@color/white">
+            android:textColor="@color/black">
         </Button>
         <Button
             android:id="@+id/btn_car_list"
@@ -205,7 +214,7 @@
             android:layout_margin="15dp"
             android:text="차량 목록 조회"
             android:background="@drawable/btn_design1"
-            android:textColor="@color/white">
+            android:textColor="@color/black">
         </Button>
 
     </LinearLayout>
