--- a/OpenCVCameraExample3/app/src/main/res/layout/activity_car_list.xml
+++ b/OpenCVCameraExample3/app/src/main/res/layout/activity_car_list.xml
@@ -175,7 +175,8 @@
     <!-- 테이블 섹션 -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/edge_design"
         android:orientation="vertical"
         android:padding="1dp">
@@ -227,7 +228,8 @@
         <!-- 테이블 바디 -->
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp">
 
             <!-- 컬럼 세로선 -->
             <LinearLayout
@@ -264,7 +266,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="280dp"
+                android:layout_height="match_parent"
                 android:id="@+id/res_recycler"/>
 
         </FrameLayout>
@@ -273,17 +275,5 @@
     </LinearLayout>
 
 
-
-    <!-- Button : 더보기 -->
-    <Button
-        android:onClick="onClick"
-        android:id="@+id/btn_more_table"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_margin="4dp"
-        android:textColor="@color/black"
-        android:background="@drawable/btn_design1"
-        android:text="더보기" />
 
 </LinearLayout>
