--- a/OpenCVCameraExample3/app/src/main/res/layout/activity_main.xml
+++ b/OpenCVCameraExample3/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/back_yellow"
-    android:padding="20dp"
+    android:background="@color/yellow"
+    android:padding="10dp"
     android:weightSum="100"
     tools:context=".MainActivity">
 
