--- a/OpenCVCameraExample3/app/src/main/res/layout/recyclerview_vis_item.xml
+++ b/OpenCVCameraExample3/app/src/main/res/layout/recyclerview_vis_item.xml
@@ -31,6 +31,7 @@
         android:gravity="center"
         android:onClick="onClicked"
         android:text="상세보기"
+        android:background="@drawable/btn_design1"
         android:layout_weight="1"/>
 
 
