--- a/OpenCVCameraExample3/app/src/main/res/layout/activity_car_list.xml
+++ b/OpenCVCameraExample3/app/src/main/res/layout/activity_car_list.xml
@@ -77,7 +77,7 @@
                 android:text="차량번호" />
 
             <EditText
-                android:id="@+id/edit_inquiry_name"
+                android:id="@+id/edit_search_carNum"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autofillHints=" "
@@ -109,7 +109,7 @@
                 android:layout_marginRight="10dp" />
 
             <EditText
-                android:id="@+id/edit_inquiry_phone"
+                android:id="@+id/edit_search_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autofillHints=" "
@@ -142,7 +142,7 @@
                 android:text="전화번호" />
 
             <EditText
-                android:id="@+id/edit_inquiry_call"
+                android:id="@+id/edit_search_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autofillHints=" "
@@ -158,6 +158,7 @@
             android:layout_columnWeight="1">
 
             <Button
+                android:onClick="onClick"
                 android:id="@+id/btn_search"
                 android:layout_width="115dp"
                 android:layout_height="match_parent"
