--- a/OpenCVCameraExample3/app/src/main/res/layout/recyclerview_item.xml
+++ b/OpenCVCameraExample3/app/src/main/res/layout/recyclerview_item.xml
@@ -5,30 +5,39 @@
     android:orientation="horizontal"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tv_car_no"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_weight="10"/>
-    <TextView
-        android:id="@+id/tv_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_weight="7"/>
-    <TextView
-        android:id="@+id/tv_phone"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_weight="12"/>
-    <TextView
-        android:id="@+id/tv_address"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_weight="10"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:background="@drawable/list_line"
+        >
 
+        <TextView
+            android:id="@+id/tv_car_no"
+            android:layout_width="0dp"
+            android:layout_height="20dp"
+            android:gravity="center"
+            android:layout_weight="10"/>
+        <TextView
+            android:id="@+id/tv_name"
+            android:layout_width="0dp"
+            android:layout_height="20dp"
+            android:gravity="center"
+            android:layout_weight="7"/>
+        <TextView
+            android:id="@+id/tv_phone"
+            android:layout_width="0dp"
+            android:layout_height="20dp"
+            android:gravity="center"
+            android:layout_weight="12"/>
+        <TextView
+            android:id="@+id/tv_address"
+            android:layout_width="0dp"
+            android:layout_height="20dp"
+            android:gravity="center"
+            android:layout_weight="10"/>
+
+
+    </LinearLayout>
 
 </LinearLayout>
