--- a/OpenCVCameraExample3/app/src/main/res/drawable/list_line.xml
+++ b/OpenCVCameraExample3/app/src/main/res/drawable/list_line.xml
@@ -9,7 +9,7 @@
         </shape>
     </item>
 
-    <item android:bottom="1dp">
+    <item android:bottom="1dp" android:left="1.5dp">
         <shape android:shape="rectangle">
             <solid android:color="@color/white" />
         </shape>
