--- a/OpenCVCameraExample3/app/src/main/res/layout/recyclerview_item.xml
+++ b/OpenCVCameraExample3/app/src/main/res/layout/recyclerview_item.xml
@@ -9,8 +9,72 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:background="@drawable/list_line"
         >
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="10"
+            android:background="@drawable/list_line"
+            >
+            <TextView
+                android:layout_gravity="center"
+                android:id="@+id/tv_car_no"
+                android:layout_width="0dp"
+                android:layout_height="20dp"
+                android:gravity="center"
+                android:layout_weight="10"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="7"
+            android:background="@drawable/list_line"
+            >
+            <TextView
+                android:layout_gravity="center"
+                android:id="@+id/tv_name"
+                android:layout_width="0dp"
+                android:layout_height="20dp"
+                android:gravity="center"
+                android:layout_weight="7"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="12"
+            android:background="@drawable/list_line"
+            >
+            <TextView
+                android:layout_gravity="center"
+                android:id="@+id/tv_phone"
+                android:layout_width="0dp"
+                android:layout_height="20dp"
+                android:gravity="center"
+                android:layout_weight="12"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="10"
+            android:background="@drawable/list_line"
+            >
+            <TextView
+                android:layout_gravity="center"
+                android:id="@+id/tv_address"
+                android:layout_width="0dp"
+                android:layout_height="20dp"
+                android:gravity="center"
+                android:layout_weight="10"/>
+
+        </LinearLayout>
+
+        <!--
 
         <TextView
             android:id="@+id/tv_car_no"
@@ -37,6 +101,7 @@
             android:gravity="center"
             android:layout_weight="10"/>
 
+            -->
 
     </LinearLayout>
 
