--- a/OpenCVCameraExample3/app/src/main/res/drawable/list_line.xml
+++ b/OpenCVCameraExample3/app/src/main/res/drawable/list_line.xml
@@ -1,5 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+
+
+    <item>
+        <shape android:shape="rectangle">
+
+            <stroke
+                android:width="1.5dp"
+                android:color="@color/yellow" />
+            <solid
+                android:color="@color/white"/>
+
+        </shape>
+    </item>
+
+    <!--
     <item>
         <shape android:shape="rectangle">
 
@@ -9,11 +24,13 @@
         </shape>
     </item>
 
+
     <item android:bottom="1dp" android:left="1.5dp">
         <shape android:shape="rectangle">
             <solid android:color="@color/white" />
         </shape>
     </item>
 
+    -->
 
 </layer-list>
