--- a/OpenCVCameraExample3/app/src/main/res/drawable/btn_detail.xml
+++ b/OpenCVCameraExample3/app/src/main/res/drawable/btn_detail.xml
@@ -4,6 +4,10 @@
 
     <solid
         android:color="@color/back_yellow"/>
+    <stroke
+        android:width="1.5dp"
+        android:color="@color/yellow"
+        />
     <size
         android:width="36dp"
         android:height="50dp" />
