--- a/OpenCVCameraExample3/app/src/main/res/layout/activity_vis__car_list.xml
+++ b/OpenCVCameraExample3/app/src/main/res/layout/activity_vis__car_list.xml
@@ -262,7 +262,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="280dp"
+                android:layout_height="match_parent"
                 android:id="@+id/vis_recycler"/>
 
         </FrameLayout>
